--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
         <section>
             <h2>Welcome to the Information Systems Department</h2>
-            <p>Explore our programs, faculty, and research initiatives at UMBC's IS department.</p>
+            <p>Explore our programs, faculty, and research initiatives at UMBC's IS department. Join us in shaping the future of information technology.</p>
             <img src="images/department.jpg" alt="UMBC IS Department">
         </section>
     </main>
