--- a/undergraduate.html
+++ b/undergraduate.html
@@ -20,7 +20,7 @@
     <main>
         <section>
             <h2>Undergraduate Program</h2>
-            <p>Learn about our Information Systems undergraduate degree, including core requirements, concentrations, and opportunities.</p>
+            <p>Learn about our Information Systems undergraduate degree, including core requirements, concentrations, and exciting career opportunities.</p>
             <ul>
                 <li><strong>Core Courses</strong>: Data Management, Systems Analysis, Web Development</li>
                 <li><strong>Specializations</strong>: Cybersecurity, Data Science, Health Informatics</li>
@@ -33,3 +33,4 @@
     </footer>
 </body>
 </html>
+
